[WIP]チャット機能

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:weightSum="2">
+        android:weightSum="3">
 
         <Button
             android:id="@+id/start"
@@ -36,6 +36,14 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="ストップ" />
+
+        <Button
+            android:id="@+id/send"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="そうしん" />
+
     </LinearLayout>
 
     <android.support.v7.widget.RecyclerView
