チャット部分を実装

--- a/app/src/main/res/layout/recycler_view_ble.xml
+++ b/app/src/main/res/layout/recycler_view_ble.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="10dp"
     android:orientation="horizontal"
     android:weightSum="2">
 
@@ -15,17 +16,20 @@
             android:id="@+id/device_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="@color/black"
             android:textSize="25sp" />
 
         <TextView
             android:id="@+id/device_address"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textColor="@color/black" />
 
         <TextView
             android:id="@+id/time"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textColor="@color/black" />
     </LinearLayout>
 
     <TextView
@@ -33,5 +37,6 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:gravity="left" />
+        android:gravity="left"
+        android:textColor="@color/black" />
 </LinearLayout>
