--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#67d65c</color>
+    <color name="colorPrimaryDark">#55b34d</color>
+    <color name="colorAccent">#e5e8e3</color>
+    <color name="black">#191a19</color>
+    <color name="white">#e5e8e3</color>
 </resources>
